<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0ff"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context="com.flower.yeshivatyeruham.LoginActivity">

    <LinearLayout
        android:id="@+id/numVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible"
        tools:context="com.flower.yeshivatyeruham.LoginActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="לפני שאתה נכנס, \n\ עלינו לאמת שאתה באמת אתה"
            android:textSize="18dp"
            android:textAlignment="center"
            android:visibility="visible" />



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submit"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="אמת מספר"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="בלחיצה על הכפתור ישלח למכשירך ס.מ.ס לצורך אימות. אם המספר נמצא בדף הקשר הישיבתי ההתחברות תאושר.\nבמידה ולא תצליח להתחבר ייתכן שמספרך אינו מעודכן בדף הקשר הישיבתי - פנה לאהד טיברגר - 0527900354.\n\nאם אתה לא תלמיד הישיבה, ומעוניין להאזין לשיעורים שהועברו בישיבה, ניתן להתחבר כאורח" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:orientation="horizontal">

            <Button
                android:id="@+id/guest"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="התחבר כאורח"
                android:textSize="18dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1.00"
            android:background="#f0f0ff"
            android:visibility="visible"
            android:layout_marginLeft="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passVerify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context="com.flower.yeshivatyeruham.LoginActivity">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_user_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:visibility="visible" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/manager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="manager" />

                    <Button
                        android:id="@+id/active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="active" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>
